[CARBONDATA-3889] Enable scalastyle check for all scala test code
Why is this PR needed?
there are many code style issues in test source code
it results in ugly code

What changes were proposed in this PR?
keep long sql if needed by using comment "// scalastyle:off lineLength"
optimize import for all scala test cases
fix code style issues

Does this PR introduce any user interface change?
No

Is any new test case added?
No

This closes #3950